# Chimera_Agentic_IT_Support

./: .env.example  .gitignore  Makefile  README.md  SETUP_GUIDE.md  WORKFLOW_README.md  env.template  hackathon.sln  pyproject.toml  requirements_simple.txt  setup_jira_config.py  test_jira_integration.py  test_workflow_simple.py
API/: API.csproj  Program.cs
API/Controllers/: RequestsController.cs  TicketsController.cs
Application/: Application.csproj
Application/DTOs/: AgentResponse.cs
Application/Ports/: AgentType.cs  IClassifierAgent.cs  IExecutorAgent.cs  IITExecutorAgent.cs  IJiraAgent.cs  IPlannerAgent.cs
Config/: Class1.cs
Domain/: Domain.csproj
Domain/Tickets/: Ticket.cs  TicketHistoryEntry.cs  TicketStatus.cs
Persistence/: AppDbContext.cs  AppDbContextFactory.cs  EfTicketRepository.cs  Persistence.csproj
Persistence/Migrations/: 20250831062958_Initial.Designer.cs  20250831062958_Initial.cs  AppDbContextModelSnapshot.cs
company_docs/: approved_software_list.csv  data_access_request_log.csv  password_reset_runbook.txt  sample_policy.txt
frontend/: next.config.ts  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
hackathon/: Program.cs  appsettings.json  hackathon.csproj  hackathon.http
hackathon/Controllers/: HealthController.cs  RequestsController.cs  TicketsController.cs
local_it_support/: __init__.py  config.py  main.py
src/: __init__.py  config.py  test_llm_registry.py
src/store/: db.py  (+7 more)
tests/: __init__.py  test_main.py
ticket_data/: sample_tickets.csv  sample_tickets.json  sample_tickets.txt
(+81 files in other folders)
