[tool.poetry]
name = "local-it-support"
version = "0.1.0"
description = "Local IT Support system with AI capabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    {include = "local_it_support"},
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.9"
langgraph = "^0.0.40"
langchain = "^0.1.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
sqlmodel = "^0.0.14"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"
tenacity = "^8.2.0"
tiktoken = "^0.5.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
pydantic-settings = "^2.1.0"
rapidfuzz = "^3.5.0"
pypdf = "^3.17.0"
docx2txt = "^0.8"
unstructured = "^0.11.0"
chromadb = "^0.4.0"
langchain-community = "^0.0.10"
langchain-core = "^0.1.0"
langchain-openai = "^0.1.0"
langchain-ollama = "^0.1.0"
email-validator = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
